Fix browser support modal in dark mode

--- a/src/components/browser-modal/browser-modal.css
+++ b/src/components/browser-modal/browser-modal.css
@@ -22,7 +22,7 @@
     user-select: none;
     width: 500px;
 
-    color: $text-primary;
+    color: $text-primary-light;
     overflow: hidden;
 }
 
